--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,6 +535,7 @@ span{
   --max-width: 1110px;
   --container-padding: 1rem;
 
+/* this code is to limit the width of the parent  and at same time make dynmaic */
   width: min(var(--max-width), 100% - (var(--container-padding) * 2));
   margin-inline: auto;
 }
