--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,31 +355,20 @@ margin-top:-3%;
   }
 
 
-/*Blog page syle here*/
-/* Centered text */
-.text-block {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  background: rgb(0, 0, 0); /* Fallback color */
-  background: rgba(18, 18, 18, 0.5); /* Black background with 0.5 opacity */
-  color: #b6b9b7;
-  padding: 20px;
-  transform: translate(-50%, -50%);
-}
+/*blog*/
+
 /* Float four columns side by side */
-.column {
+.blog-column {
   float: left;
-  width: 25%;
+  width: 45%;
   padding: 0 10px;
-  margin-left: 16%;
 }
 
 /* Remove extra left and right margins, due to padding */
-.row {margin: 0 -5px;}
+.blog-row{margin: 0 -5px;}
 
 /* Clear floats after the columns */
-.row:after {
+.blog-row:after {
   content: "";
   display: table;
   clear: both;
@@ -387,7 +376,7 @@ margin-top:-3%;
 
 /* Responsive columns */
 @media screen and (max-width: 600px) {
-  .column {
+  .blog-column {
     width: 100%;
     display: block;
     margin-bottom: 20px;
@@ -397,14 +386,20 @@ margin-top:-3%;
 /* Style the counter cards */
 .blog {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 16px;
+  padding: 16px ;
   text-align: center;
+  margin-left: 2em;
   background-color: #f1f1f1;
 }
+.blog-row h2,  h3{
+text-align: center;
 
+}
+.blog-row p {
+text-align: center;
 
-/* footer syling */ 
-/* footer navigation */
+}
+
 
 .footer-nav {
   columns: 2;
